--- a/dashboard.html
+++ b/dashboard.html
@@ -710,6 +710,15 @@
             <p>Next-generation transaction management</p>
         </div>
 
+            <!-- DB error dump (hidden by default) -->
+            <div id="dbErrorContainer" style="position:fixed; bottom:18px; right:18px; z-index:1200; max-width:520px; display:none;">
+                <div style="background:#fff; padding:8px 12px; border-radius:8px; box-shadow:0 6px 18px rgba(0,0,0,0.08); color:#111; font-size:0.95rem;">
+                    <strong style="color:#b91c1c;">Database Error</strong>
+                    <div id="dbErrorMessage" style="margin-top:6px; color:#6b7280;"></div>
+                </div>
+                <pre id="dbErrorDump" style="background:#111; color:#fff; padding:10px; border-radius:8px; margin-top:8px; max-height:240px; overflow:auto; font-size:0.8rem;"></pre>
+            </div>
+
         <div class="month-selector">
             <select id="dashboardMonthSelect">
                 <option value="">All Months</option>
@@ -772,6 +781,14 @@
                     <div class="form-group">
                         <label for="phoneNumber" class="form-label">GCash Number</label>
                         <input type="tel" id="phoneNumber" class="form-input" required placeholder="09XX XXX XXXX" pattern="[0-9]{11}" maxlength="11">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="referenceInput" class="form-label">Reference Number</label>
+                        <div style="display:flex; gap:8px; align-items:center;">
+                            <input type="text" id="referenceInput" class="form-input" placeholder="Enter or generate reference (e.g. GC250928-153045-4821)" style="flex:1;" />
+                            <button type="button" id="regenRefBtn" class="btn" style="padding:0.6rem 0.8rem;">Regenerate</button>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -869,50 +886,53 @@
     </div>
 
     <script>
-        // Supabase client (same config used in index.html)
-        (function(){
-            const script = document.createElement('script');
-            script.src = 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js';
-            script.onload = function() {
-                window.SUPABASE_URL = 'https://nobmprhdmdofqpqhlwvz.supabase.co';
-                window.SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5vYm1wcmhkbWRvZnFwcWhsd3Z6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTkwNDQ3OTIsImV4cCI6MjA3NDYyMDc5Mn0.0tUuzCTR3DF3ohcmeXeZaUbdaAN-Q5VOV9Zh4po1AjY';
-                window.supabase = window.supabase || window.supabaseJs || window.supabase; // keep available globally
-                try {
-                    window.supabase = window.supabase.createClient(window.SUPABASE_URL, window.SUPABASE_KEY);
-                } catch (e) {
-                    console.warn('Supabase client init error', e);
-                }
-            };
-            document.head.appendChild(script);
-        })();
-        // Supabase client
+        // Supabase configuration (provided)
         const SUPABASE_URL = 'https://nobmprhdmdofqpqhlwvz.supabase.co';
         const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5vYm1wcmhkbWRvZnFwcWhsd3Z6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTkwNDQ3OTIsImV4cCI6MjA3NDYyMDc5Mn0.0tUuzCTR3DF3ohcmeXeZaUbdaAN-Q5VOV9Zh4po1AjY';
-        const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+        let supabase = null;
+        let supabaseReady = false;
+        try {
+            const sup = window.supabase || window.supabaseJs;
+            if (!sup || !sup.createClient) throw new Error('Supabase SDK not found');
+            supabase = sup.createClient(SUPABASE_URL, SUPABASE_KEY);
+            supabaseReady = true;
+        } catch (e) {
+            console.error('Supabase init error', e);
+        }
 
         let transactions = [];
         let currentUser = null; // will hold user object with email
 
         // Load transactions for current user from Supabase
         async function loadUserData() {
-            if (!currentUser || !currentUser.email) return false;
-            const { data, error } = await supabase
-                .from('transactions')
-                .select('*')
-                .eq('user_email', currentUser.email)
-                .order('date', { ascending: false });
-            if (error) {
-                console.error('Error loading transactions', error);
-                return false;
-            }
-            // normalize DB rows to UI-friendly shape
-            transactions = (data || []).map(normalizeRow);
-            return true;
+                    if (!supabaseReady) {
+                        console.error('Supabase not initialized when loading data');
+                        showDbError('Supabase not initialized', { step: 'loadUserData' });
+                        return false;
+                    }
+                    if (!currentUser || !currentUser.email) {
+                        console.warn('No current user when loading data');
+                        return false;
+                    }
+                    const { data, error } = await supabase
+                        .from('transactions')
+                        .select('*')
+                        .eq('user_email', currentUser.email)
+                        .order('date', { ascending: false });
+                    if (error) {
+                        console.error('Error loading transactions', error);
+                        showDbError('Error loading transactions', error);
+                        return false;
+                    }
+                    // normalize DB rows to UI-friendly shape
+                    transactions = (data || []).map(normalizeRow);
+                    return true;
         }
 
         function normalizeRow(row) {
             return {
                 id: row.id,
+                reference: row.reference || row.ref || (row.id ? 'TXN-' + String(row.id).padStart(6, '0') : ''),
                 customerName: row.customer_name || row.customerName || 'N/A',
                 phoneNumber: row.phone_number || row.phoneNumber || '',
                 amount: Number(row.amount) || 0,
@@ -924,6 +944,32 @@
                 rawDate: row.date,
                 status: row.status || 'Completed'
             };
+        }
+
+        // Create a readable reference for transactions
+        function generateReference() {
+            const dt = new Date();
+            const y = dt.getFullYear().toString().slice(-2);
+            const m = String(dt.getMonth() + 1).padStart(2, '0');
+            const d = String(dt.getDate()).padStart(2, '0');
+            const t = String(dt.getHours()).padStart(2, '0') + String(dt.getMinutes()).padStart(2, '0') + String(dt.getSeconds()).padStart(2, '0');
+            const rand = Math.floor(Math.random() * 9000) + 1000; // 4 digits
+            return `GC${y}${m}${d}-${t}-${rand}`; // e.g. GC250928-153045-4821
+        }
+
+        // Show DB error in the floating dump box for easier debugging
+        function showDbError(message, obj) {
+            try {
+                const container = document.getElementById('dbErrorContainer');
+                const msgEl = document.getElementById('dbErrorMessage');
+                const dump = document.getElementById('dbErrorDump');
+                if (msgEl) msgEl.textContent = message;
+                if (dump) dump.textContent = obj ? JSON.stringify(obj, null, 2) : '';
+                if (container) container.style.display = 'block';
+                console.error('DB ERROR:', message, obj);
+            } catch (e) {
+                console.error('Failed to render DB error', e);
+            }
         }
 
         // Save is handled per operation (insert/delete) using Supabase; no local saveUserData
@@ -1062,7 +1108,7 @@
                 html += `
                     <div class="transaction-item">
                         <div class="transaction-header">
-                            <span class="transaction-id">TXN-${String(t.id).padStart(6, '0')}</span>
+                            <span class="transaction-id">${t.reference || 'TXN-' + String(t.id).padStart(6, '0')}</span>
                             <span class="transaction-status ${t.status === 'Completed' ? 'status-completed' : 'status-pending'}">${t.status}</span>
                         </div>
                         <div class="transaction-details">
@@ -1139,8 +1185,9 @@
             doc.setFontSize(18);
             doc.text(`Monthly Transaction Log - ${selectedMonth}`, 14, 20);
 
-            const columns = ['ID', 'Date', 'Customer', 'Phone', 'Type', 'Amount', 'Service Charge', 'Total', 'Add Charge to Balance', 'Balance After'];
+            const columns = ['Reference','ID', 'Date', 'Customer', 'Phone', 'Type', 'Amount', 'Service Charge', 'Total', 'Add Charge to Balance', 'Balance After'];
             const data = monthTrans.map(t => [
+                t.reference || `TXN-${String(t.id).padStart(6, '0')}`,
                 `TXN-${String(t.id).padStart(6, '0')}`,
                 t.date,
                 t.customerName,
@@ -1198,8 +1245,9 @@
             }).sort((a, b) => new Date(a.date) - new Date(b.date));
 
             const { balanceMap } = updateStats(transactions); // Use global balance map
-            const columns = ['ID', 'Date', 'Customer', 'Phone', 'Type', 'Amount', 'Service Charge', 'Total', 'Add Charge to Balance', 'Balance After'];
+            const columns = ['Reference','ID', 'Date', 'Customer', 'Phone', 'Type', 'Amount', 'Service Charge', 'Total', 'Add Charge to Balance', 'Balance After'];
             const data = monthTrans.map(t => [
+                t.reference || `TXN-${String(t.id).padStart(6, '0')}`,
                 `TXN-${String(t.id).padStart(6, '0')}`,
                 t.date,
                 t.customerName,
@@ -1240,9 +1288,12 @@
         function deleteTransaction(id) {
             if (confirm('Are you sure you want to delete this transaction?')) {
                 (async () => {
+                    if (!supabaseReady) { showDbError('Supabase not initialized', { step: 'deleteTransaction' }); return; }
+                    if (!currentUser || !currentUser.email) { showDbError('No authenticated user', { step: 'deleteTransaction' }); return; }
                     const { error } = await supabase.from('transactions').delete().eq('id', id);
                     if (error) {
                         console.error('Delete error', error);
+                        showDbError('Failed to delete transaction', error);
                         alert('Failed to delete transaction. See console.');
                         return;
                     }
@@ -1294,10 +1345,12 @@
             const charge = parseFloat(document.getElementById('charge').value) || 0;
             const includeCharge = document.getElementById('includeCharge').checked;
             const total = amount + charge;
-
             (async () => {
+                if (!supabaseReady) { showDbError('Supabase not initialized', { step: 'insertTransaction' }); return; }
+                if (!currentUser || !currentUser.email) { showDbError('No authenticated user', { step: 'insertTransaction' }); return; }
                 const payload = {
                     user_email: currentUser.email,
+                    reference: (document.getElementById('referenceInput')?.value) || generateReference(),
                     customer_name: document.getElementById('customerName').value,
                     phone_number: document.getElementById('phoneNumber').value,
                     amount: amount,
@@ -1312,6 +1365,7 @@
                 const { data, error } = await supabase.from('transactions').insert([payload]).select();
                 if (error) {
                     console.error('Insert error', error);
+                    showDbError('Failed to save transaction', error);
                     alert('Failed to save transaction. See console.');
                     return;
                 }
@@ -1331,10 +1385,12 @@
         document.getElementById('topupForm').addEventListener('submit', function(e) {
             e.preventDefault();
             const amount = parseFloat(document.getElementById('topupAmount').value);
-
             (async () => {
+                if (!supabaseReady) { showDbError('Supabase not initialized', { step: 'topup' }); return; }
+                if (!currentUser || !currentUser.email) { showDbError('No authenticated user', { step: 'topup' }); return; }
                 const payload = {
                     user_email: currentUser.email,
+                    reference: (document.getElementById('referenceInput')?.value) || generateReference(),
                     customer_name: 'Self',
                     phone_number: '',
                     amount: amount,
@@ -1349,6 +1405,7 @@
                 const { data, error } = await supabase.from('transactions').insert([payload]).select();
                 if (error) {
                     console.error('Topup insert error', error);
+                    showDbError('Failed to save top up', error);
                     alert('Failed to save top up. See console.');
                     return;
                 }
@@ -1386,31 +1443,42 @@
             updateDashboard(e.target.value);
         });
         // On load: verify user logged in and load their data
-        (function init() {
-            const email = currentUserEmail();
-            if (!email) {
-                // Not logged in - redirect to login page
-                window.location.href = 'index.html';
-                return;
-            }
-            // show current user
-            document.getElementById('currentUser').textContent = email;
-            // wire logout
-            document.getElementById('logoutBtn').addEventListener('click', async function() {
-                try {
-                    if (window.supabase && window.supabase.auth) {
-                        await window.supabase.auth.signOut();
-                    }
-                } catch (e) {
-                    console.warn('Supabase signOut error', e);
+        (async function init() {
+            try {
+                const { data: { user } } = await supabase.auth.getUser();
+                if (!user || !user.email) {
+                    // Not logged in - redirect to login page
+                    window.location.href = 'index.html';
+                    return;
                 }
-                localStorage.removeItem('gcash_current_user');
-                window.location.href = 'index.html';
-            });
+                currentUser = user;
+                document.getElementById('currentUser').textContent = user.email;
 
-            loadUserData();
-            populateMonthSelectors();
-            updateDashboard();
+                document.getElementById('logoutBtn').addEventListener('click', async function() {
+                    try {
+                        await supabase.auth.signOut();
+                    } catch (e) {
+                        console.warn('Supabase signOut error', e);
+                    }
+                    localStorage.removeItem('gcash_current_user');
+                    window.location.href = 'index.html';
+                });
+
+                // Initialize reference input for new transactions and wire regenerate button
+                try {
+                    const refEl = document.getElementById('referenceInput');
+                    const regenBtn = document.getElementById('regenRefBtn');
+                    if (refEl) refEl.value = generateReference();
+                    if (regenBtn) regenBtn.addEventListener('click', () => { if (refEl) refEl.value = generateReference(); });
+                } catch (e) { console.warn('Reference init error', e); }
+
+                await loadUserData();
+                populateMonthSelectors();
+                updateDashboard();
+            } catch (e) {
+                console.error('Init error', e);
+                window.location.href = 'index.html';
+            }
         })();
     </script>
 </body>
